# using-static-lib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
include/: datetimeutil.h
